--- a/html/main.html
+++ b/html/main.html
@@ -18,9 +18,9 @@
 </div>
 
 <div id="currentversioninfo">
-<div class="version">Version 1.9.3</div>
-<div class="releasedate">July 07, 2013</div>
-<div class="whatsnew"><a href="docs/en/whatsnew.html">Read what's new in Icinga 1.9.3</a></div>
+<div class="version">Version 1.10.0</div>
+<div class="releasedate">Oktober 24, 2013</div>
+<div class="whatsnew"><a href="docs/en/whatsnew.html">Read what's new in Icinga 1.10.0</a></div>
 </div>
 
 <div id="developer">
