--- a/html/main.html
+++ b/html/main.html
@@ -18,9 +18,9 @@
 </div>
 
 <div id="currentversioninfo">
-<div class="version">Version 1.9.5</div>
-<div class="releasedate">Februar 11, 2014</div>
-<div class="whatsnew"><a href="docs/en/whatsnew.html">Read what's new in Icinga 1.9.5</a></div>
+<div class="version">Version 1.9.6</div>
+<div class="releasedate">März 28, 2014</div>
+<div class="whatsnew"><a href="docs/en/whatsnew.html">Read what's new in Icinga 1.9.6</a></div>
 </div>
 
 <div id="developer">
