--- a/html/main.html
+++ b/html/main.html
@@ -18,9 +18,9 @@
 </div>
 
 <div id="currentversioninfo">
-<div class="version">Version 1.11.7</div>
-<div class="releasedate">September 03, 2014</div>
-<div class="whatsnew"><a href="docs/en/whatsnew.html">Read what's new in Icinga 1.11.7</a></div>
+<div class="version">Version 1.12.0</div>
+<div class="releasedate">Oktober 25, 2014</div>
+<div class="whatsnew"><a href="docs/en/whatsnew.html">Read what's new in Icinga 1.12.0</a></div>
 </div>
 
 <div id="developer">
