--- a/html/main.html
+++ b/html/main.html
@@ -18,9 +18,9 @@
 </div>
 
 <div id="currentversioninfo">
-<div class="version">Version 1.13.0</div>
-<div class="releasedate">März 13, 2015</div>
-<div class="whatsnew"><a href="docs/en/whatsnew.html">Read what's new in Icinga 1.13.0</a></div>
+<div class="version">Version 1.13.1</div>
+<div class="releasedate">April 05, 2015</div>
+<div class="whatsnew"><a href="docs/en/whatsnew.html">Read what's new in Icinga 1.13.1</a></div>
 </div>
 
 <div id="developer">
